Added recipe details screen
Added recipe details screen

--- a/presentation/src/main/res/menu/recipes_menu.xml
+++ b/presentation/src/main/res/menu/recipes_menu.xml
@@ -16,6 +16,6 @@
         android:iconTint="#757575"
         android:title="@string/settings"
         app:showAsAction="ifRoom"
-        />
+        tools:targetApi="o"/>
 
 </menu>
