--- a/presentation/src/main/res/layout/fragment_bottom_sheet_settings.xml
+++ b/presentation/src/main/res/layout/fragment_bottom_sheet_settings.xml
@@ -33,7 +33,7 @@
             android:layout_marginTop="24dp"
             android:layout_weight="1"
             android:text="@string/sort_by_name"
-            android:textColor="#333333"
+            android:textColor="@color/text3"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -66,7 +66,7 @@
             android:layout_marginTop="24dp"
             android:layout_weight="1"
             android:text="@string/sort_by_date"
-            android:textColor="#333333"
+            android:textColor="@color/text3"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
