--- a/presentation/src/main/res/layout/fragment_recipe_info.xml
+++ b/presentation/src/main/res/layout/fragment_recipe_info.xml
@@ -54,7 +54,7 @@
             android:text="refresh"
             android:textColor="@color/blue"
             android:textSize="14sp"
-            app:backgroundTint="#F2F2F2"
+            app:backgroundTint="@color/background"
             app:cornerRadius="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +133,7 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/roboto"
-                    android:textColor="#9C9C9C"
+                    android:textColor="@color/text9"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -147,8 +147,8 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/roboto"
-                    android:text="Difficulty:"
-                    android:textColor="#4A4A4A"
+                    android:text="@string/difficulty"
+                    android:textColor="@color/text4"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/descTextView" />
@@ -160,8 +160,8 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="6dp"
                     android:fontFamily="@font/roboto"
-                    android:text="Instruction:"
-                    android:textColor="#4A4A4A"
+                    android:text="@string/instruction"
+                    android:textColor="@color/text4"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -193,7 +193,7 @@
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/roboto"
                     android:textAlignment="textStart"
-                    android:textColor="#9C9C9C"
+                    android:textColor="@color/text9"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/instrTextView"
@@ -206,8 +206,8 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/roboto"
-                    android:text="Recommended:"
-                    android:textColor="#4A4A4A"
+                    android:text="@string/recommended"
+                    android:textColor="@color/text4"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvInstruction" />
