--- a/presentation/src/main/res/layout/fragment_recipes_list.xml
+++ b/presentation/src/main/res/layout/fragment_recipes_list.xml
@@ -5,9 +5,6 @@
 
     <data>
 
-        <variable
-            name="api_error"
-            type="Boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="#363636"
+                android:textColor="@color/text36"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +46,7 @@
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
                 android:textAlignment="center"
-                android:textColor="#363636"
+                android:textColor="@color/text36"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,10 +59,10 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
-                android:text="refresh"
+                android:text="@string/refresh"
                 android:textColor="@color/blue"
                 android:textSize="14sp"
-                app:backgroundTint="#F2F2F2"
+                app:backgroundTint="@color/background"
                 app:cornerRadius="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
