--- a/presentation/src/main/res/layout/item_breef_layout.xml
+++ b/presentation/src/main/res/layout/item_breef_layout.xml
@@ -44,7 +44,7 @@
                 android:fontFamily="@font/roboto"
                 android:maxLines="1"
                 android:text="@{recipe.name}"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
