--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="text4">#4A4A4A</color>
     <color name="text9">#9C9C9C</color>
     <color name="icons">#757575</color>
+    <color name="text3">#333333</color>
+    <color name="text36">#363636</color>
 </resources>
