--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -30,8 +30,8 @@
 
     <style name="popupTheme" parent="Theme.AppCompat.Light">
 
-        <item name="android:background">#757575</item>
-        <item name="android:textColor">#757575</item>
+        <item name="android:background">@color/icons</item>
+        <item name="android:textColor">@color/icons</item>
 
     </style>
 
