--- a/presentation/src/main/res/layout/fragment_recipe_info.xml
+++ b/presentation/src/main/res/layout/fragment_recipe_info.xml
@@ -10,12 +10,12 @@
         android:id="@+id/clNoInternetInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="1000dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="invisible">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/tvErrorInfo"
